fix: responsible layout bugfixing

--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body {
 
 .wrapper {
   max-width: 1020px;
-  /* min-width: 1020px; */
   margin: 0 auto;
   overflow: hidden;
 }
@@ -68,6 +67,15 @@ body {
   align-items: center;
   padding-left: 40px;
   padding-right: 40px;
+}
+
+.header__logo {
+  z-index: 1002;
+}
+
+.header__logo.mobile-menu {
+  transform: scale(0.76);
+  margin: -15px 0 0 -176px;
 }
 
 .header__logo h1 {
@@ -97,12 +105,12 @@ body {
   margin-right: 14px;
 }
 
-.header__navigation ul li a {
+.header__navigation ul li a, .header__mobile-menu ul li a {
   color: #ffffff;
   text-decoration: none;
 }
 
-.header__navigation .active {
+.header__navigation .active, .header__mobile-menu .active {
   color: #f06c64;
 }
 
@@ -124,6 +132,7 @@ body {
 
 .header__hamburger {
   background-image: url("./assets/images/icons/Burger-menu-icon.png");
+  margin: 3px 0 0 7px;
   position: absolute;
   height: 30px;
   width: 30px;
@@ -133,8 +142,36 @@ body {
   display: none;
 }
 
-.slider {
-  /* background-color: #f06c64; */
+.header__hamburger.active {
+  transform: rotate(90deg);
+  transition: transform 0.2s ease-out;
+}
+
+.header__wrapper {
+  background-color: black;
+  opacity: 0.5;
+  z-index: 200;
+  width: 100%;
+  height: 100%;
+}
+
+.header__mobile-menu {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #2D303A;
+  width: 74vw;
+  height: 100vh;
+  z-index: 1001;
+}
+
+.header__mobile-menu ul {
+  list-style: none;
+  margin-top: -55px;
+  padding-left: 72px;
+  font-size: 2em;
+  line-height: 2.5;
 }
 
 .slider__promo {
@@ -1119,9 +1156,18 @@ footer {
     margin: 4px 0 10px 0;
   }
 
-  /* @media(max-width: 767px) {
+  @media(max-width: 767px) {
+    main {
+      margin-top: 71px;
+    }
+
     .header {
       justify-content: center;
+    }
+
+    .header__logo h1 {
+      font-size: 1.7em;
+      margin: 9px 0 0 10px;
     }
 
     .header__navigation {
@@ -1130,7 +1176,237 @@ footer {
 
     .header__hamburger {
       display: block;
+      z-index: 1002;
     }
-  } */
+
+    .header {
+      height: 65px;
+    }
+
+    .slider {
+      height: 214px;
+    }
+
+    .promo__content {
+      height: 214px;
+    }
+
+    .content__phone_vertical {
+      top: 24px;
+    }
+
+    .content__phone_vertical .shadow {
+      height: 177px;
+    }
+
+    #phone-vertical {
+      height: 171px;
+    }
+
+    #screen-vertical {
+      top: 20px;
+      left: 5px;
+      width: 67px;
+      height: 120px;
+    }
+
+    #yellow-picture {
+      top: 20px;
+      width: 68px;
+      left: 4px;
+    }
+
+    .content__phone_horizontal {
+      right: 21%;
+      top: 237px;
+    }
+
+    .content__phone_horizontal .shadow {
+      right: 189px;
+      top: 68px;
+      width: 89px;
+    }
+
+    #phone-horizontal {
+      width: 80px;
+      top: 79px;
+      right: 199px;
+    }
+
+    #screen-horizontal {
+      right: 204px;
+      height: 123px;
+      top: 102px;
+      width: 69px;
+    }
+
+    #blue-picture {
+      right: 205px;
+      width: 69px;
+      top: 102px;
+    }
+
+    .promo__arrow_left {
+      margin-left: 9px;
+      margin-top: 5px;
+    }
+
+    .promo__arrow_right {
+      margin-right: 10px;
+      margin-top: 6px;
+    }
+
+    .services {
+      padding-top: 32px;
+      padding-left: 32px;
+      height: 934px;
+    }
+
+    .info {
+      margin-bottom: 26px;
+    }
+
+    .options {
+      grid-template-columns: repeat(1, 80vw);
+      grid-template-rows: repeat(6, 85px);
+      column-gap: 10vw;
+      row-gap: 35px;
+    }
+
+    .entity__information {
+      width: 100%;
+    }
+
+    .entity__icon {
+      margin-right: 37px;
+    }
+
+    .portfolio {
+      padding: 42px 29px 0px 29px;
+    }
+
+    .portfolio__description {
+      margin-bottom: 20px;
+    }
+
+    .gallery__tiles {
+      grid-template-columns: repeat(2, 40vw);
+      grid-template-rows: repeat(4, 33vw);
+      column-gap: 4vw;
+      row-gap: 5vw;
+    }
+
+    .ship {
+      background-size: 107%;
+      background-repeat: no-repeat;
+      background-position: right -7px top -7px;
+    }
+
+    .face {
+      background-size: 161%;
+      background-repeat: no-repeat;
+      background-position: right -40px top -30px;
+    }
+
+    .town {
+      background-size: 119%;
+      background-repeat: no-repeat;
+      background-position: right -17px top -3px;
+    }
+
+    .robot {
+      background-size: 122%;
+      background-repeat: no-repeat;
+      background-position: right -17px top -5px;
+    }
+
+    .animals {
+      background-size: 114%;
+      background-repeat: no-repeat;
+      background-position: right -13px top -17px;
+    }
+
+    .sdk {
+      background-size: 113%;
+      background-repeat: no-repeat;
+      background-position: right -10px top -3px;
+    }
+
+    .space {
+      background-size: 170%;
+      background-repeat: no-repeat;
+      background-position: right -85px top -30px;
+    }
+
+    .birds {
+      background-size: 127%;
+      background-repeat: no-repeat;
+      background-position: right -24px top -26px;
+    }
+
+    .about {
+      padding: 31px 23px 8px 35px;
+    }
+
+    .about__description {
+      margin-bottom: 54px;
+    }
+
+    .about__personalities {
+      flex-direction: column;
+    }
+
+    .personalities {
+      width: 83.5vw;
+      margin-right: 2.5vw;
+      margin-bottom: 30px;
+    }
+
+    .personalities__photo {
+      height: 84vw;
+    }
+
+    .quote {
+      padding: 20px 40px 34px 30px;
+    }
+
+    .qoute__response {
+      flex-direction: column;
+    }
+
+    .quote__form_container {
+      width: 84vw;
+    }
+
+    .response__form {
+      margin-bottom: 34px;
+    }
+
+    #response-describe {
+      margin-bottom: 15px;
+    }
+
+    #response-submit {
+      width: 84vw;
+      align-self: center;
+      height: 50px;
+    }
+
+    .quote__info {
+      width: 84vw;
+    }
+
+    .info__contacts {
+      line-height: 25px;
+    }
+
+    footer {
+      justify-content: center;
+    }
+
+    .footer__copyright {
+      display: none;
+    }
+  }
 
 }
